# diceRecognizer

./: CMakeLists.txt  README.md  main.cpp
